# GolfGL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  configure.cmake
.github/workflows/: cmake.yml  docker-publish.yml
Game/Resources/Objects/golfBall/: golfBall.mtl
Game/Resources/Shaders/: ball.fs  ball.vs  entity.fs  entity.vert  entity.vs  floor.fs  pbr.frag  pbr.vert  plain.fs  plain.vert  screen.frag  screen.fs  screen.vert  skybox.vert  terrain.frag  terrain.vert
Game/Source/: Asserts.h  Data.h  Error.h  Main.cpp  Math.hpp  precomp.cpp  precomp.h
Game/Source/Data/: LightData.h  WindowData.h  imguiData.h
Game/Source/Entities/: Ball.cpp  Ball.h  Entity.h  EntityManager.cpp  EntityManager.h  Floor.cpp  Floor.h  Light.cpp  Light.h  Material.cpp  Material.h
Game/Source/Entities/Ball/: Ball.cpp  Ball.h  ballDefault.h
Game/Source/Entities/Light/: Light.cpp  Light.h  lightData.h
Game/Source/Entities/Skybox/: Skybox.cpp  Skybox.h  skyboxData.h
Game/Source/Entities/Terrain/: Terrain.cpp  Terrain.h  terrainData.h
Game/Source/Input/: Input.cpp  Input.h
Game/Source/Logger/: Log.cpp  Log.h
Game/Source/Render/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Game/Source/Render/Camera/: Camera.cpp  Camera.h
Game/Source/Render/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
Game/Source/Render/PostProcessing/: Framebuffer.cpp  Framebuffer.h  fbData.h
Game/Source/Render/Window/: DebugWindow.cpp  DebugWindow.h  Window.cpp  Window.h
Game/Source/Window/: Window.cpp  Window.h  WindowData.h
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
configuration/: visualstudio.vcxproj.filters.in
